--- a/src/app/modules/authentication/signup/component/signup/signup.component.html
+++ b/src/app/modules/authentication/signup/component/signup/signup.component.html
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
     <div class="col-12 mt-5">
-      <h2 style="color: tomato">Please Login</h2>
+      <h2 style="color: tomato">Please Sign Up</h2>
     </div>
     <div class="col-6">
-      <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+      <form>
         <div class="mb-3">
           <label for="exampleInputEmail1" class="form-label">Email address</label>
           <input type="email" formControlName="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
