Header and side nav bar chnaged

--- a/src/app/modules/core/components/side-nav-bar/side-nav-bar.component.html
+++ b/src/app/modules/core/components/side-nav-bar/side-nav-bar.component.html
@@ -1,6 +1,74 @@
-<div class="side-nav-bar">
-  <div class="sidebar">
-    <h1>Side bar</h1>
-  </div>
-  <div></div>
+<div class="navigation">
+  <ul>
+    <li>
+      <a >
+        <span class="icon">
+          <i class="fas fa-home"></i>
+        </span>
+        <span class="title">
+          Home
+        </span>
+      </a>
+    </li>
+    <li>
+      <a >
+        <span class="icon">
+          <i class="far fa-user"></i>
+        </span>
+        <span class="title">
+          Profile
+        </span>
+      </a>
+    </li>
+    <li>
+      <a >
+        <span class="icon">
+          <i class="fas fa-luggage-cart"></i>
+        </span>
+        <span class="title">
+          Orders
+        </span>
+      </a>
+    </li>
+    <li>
+      <a >
+        <span class="icon">
+          <i class="fab fa-wpforms"></i>
+        </span>
+        <span class="title">
+          Forms
+        </span>
+      </a>
+    </li>
+    <li>
+      <a >
+        <span class="icon">
+          <i class="fas fa-th"></i>
+        </span>
+        <span class="title">
+          Advance
+        </span>
+      </a>
+    </li>
+    <li>
+      <a >
+        <span class="icon">
+          <i class="fas fa-cog"></i>
+        </span>
+        <span class="title">
+          Settings
+        </span>
+      </a>
+    </li>
+    <li>
+      <a >
+        <span class="icon">
+          <i class="fas fa-sign-out-alt"></i>
+        </span>
+        <span class="title">
+          Sign out
+        </span>
+      </a>
+    </li>
+  </ul>
 </div>
