--- a/src/app/modules/core/components/side-nav-bar/side-nav-bar.component.css
+++ b/src/app/modules/core/components/side-nav-bar/side-nav-bar.component.css
@@ -1,10 +1,122 @@
-.side-nav-bar{
-  height: 100%;
-  display: grid;
-  grid-template-columns: 20% 80%;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+
 }
-.sidebar{
-  height: 100vh;
+.navigation {
+  position: fixed;
+  width: 60px;
+  height: 100%;
   background-color: lightblue;
+  transition: 0.5s ease-in-out;
+  overflow: hidden;
+}
+.navigation:hover,.navigation.active {
+  width: 250px;
+}
+.navigation ul {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+.navigation ul li {
+  position: relative;
+  width: 100%;
+  list-style: none;
+  cursor: pointer;
+}
+.navigation ul li:hover {
+  background-color: #EFEFEF;
+  border-left: 2px solid red;
+}
+.navigation ul li a {
+  position: relative;
+  display: block;
+  width: 100%;
+  display: flex;
+  text-decoration: none;
+  color: #fff;
+}
+.navigation ul li a .icon {
+  position: relative;
+  display: block;
+  min-width: 60px;
+  line-height: 60px;
+  text-align: center;
+}
+.navigation ul li a .icon .fa{
+ font-size: 24px;
+}
+.navigation ul li a .title {
+  position: relative;
+  display: block;
+  padding: 0 10px;
+  min-width: 60px;
+  line-height: 60px;
+  text-align: start;
+  white-space: nowrap;
+}
+.toggle{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 60px;
+  height: 60px;
+  background-color: #330748;
+  cursor: pointer;
+}
+.toggle.active{
+  background-color: #ea1d63;
+}
+.toggle:before{
+  content: '\f0c9';
+  font-family: fontAwesome;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  line-height: 60px;
+  text-align: center;
+  font-size: 24px;
+  color: #fff;
+}
+.toggle.active:before{
+  content: '\f00d';
+}
+@media (max-width: 767px) {
+  .navigation {
+   left: -60px;
+  }
+  .navigation.active {
+    left: 0px;
+    /* width: 100%; */
+   }
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.fas.fa-times{
+  color: #fff;
 }
 
